Update build.gradle
for actions